--- a/sourse/pug/blocks/s-step3/_s-step3.scss
+++ b/sourse/pug/blocks/s-step3/_s-step3.scss
@@ -21,7 +21,7 @@
 	.order-steps {
 		border: 1px solid #e9e9e9;
 		background-color: #f5f5f5;
-		letter-spacing: px(0.44);
+		letter-spacing: rem(0.44);
 		padding: rem(15);
 		padding-bottom: rem(12);
 		margin-bottom: rem(35);
@@ -143,7 +143,7 @@
 
 		.h4 {
 			@extend h4;
-			letter-spacing: 0.44px;
+			letter-spacing: rem(0.44);
 		}
 	}
 
@@ -196,7 +196,7 @@
 					vertical-align: top;
 					font-size: rem(17);
 					// font-family: "Open Sans - Semibold";
-					letter-spacing: 0.34px;
+					letter-spacing: rem(0.34);
 					line-height: 1.29;
 					font-weight: 700;
 					padding-bottom: rem(10);
